servicios termiandos, coverage al 91%